added validation to score model

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <td><%= score.player %></td>
     <td><%= score.score %></td>
-    <td><%= score.timestamp %></td>
+    <td><%= score.ts %></td>
     <td><%= link_to 'Show', score %></td>
     <td><%= link_to 'Edit', edit_score_path(score) %></td>
     <td><%= link_to 'Destroy', score, :confirm => 'Are you sure?', :method => :delete %></td>
